--- a/index.html
+++ b/index.html
@@ -48,46 +48,33 @@
 </div>
 
 
-
 <!-- Ibiza -->
 
-<h1 class="absolute md:text-6xl md:font-bold md:left-200 md:top-50 md:text-yellow-400 md:z-1 top-100 ">Palma</h1>
+  
+
+<div class="absolute md:-left-310 md:top-1">
+<div class="relative">
+<div class="absolute md:left-200 md:top-80 font-bold z-1">
+<p><span id="Temperatura-Ibiza"></span>°</p>
+ </div> 
+
+ <div class="relative md:left-195 md:top-90 font-bold z-1">
+<p><span id="Humedad-Ibiza"></span> %</p>
+ </div>
+
+
+
+<h1 class="absolute md:text-6xl md:font-bold md:left-200 md:top-50 md:text-red-500 md:z-1 top-110 ">Ibiza</h1>
 
 <div class="absolute md:bg-black-100 md:box-content md:size-32 md:bg-green-300 md:w-100 md:h-100 md:left-170 md:top-40 md:rounded-xl  md:shadow-red-500 md:z-0">
 <h1 class="absolute md:top-40 md:left-5 top-80">Temperatura: </h1>
 <h1 class="absolute md:top-50 md:left-5">Humedad: </h1>
 </div>
-
-
-<div class="absolute md:left-160">
-<div class="absolute md:left-200 md:top-80 font-bold z-1">
-<p><span id="Temperatura-Menorca"></span>°</p>
- </div> 
-
- <div class="relative md:left-195 md:top-90 font-bold z-1">
-<p><span id="Humedad-Menorca"></span> %</p>
- </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
 
 
 </div>
-
- 
 
 </body>
 </html>
