--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 
-<div class="absolute md:left-160">
+<div class="relative md:left-160">
 <div class="absolute md:left-200 md:top-80 font-bold z-1">
 <p><span id="Temperatura-Menorca"></span>°</p>
  </div> 
@@ -79,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
